feat!: hard cut over platform entity identifiers
